--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -1,30 +1,16 @@
-/* reset files */
-
-@import "base/reset.local";
-
 /* config include */
 
 @import "config/variables";
 @import "config/mixin";
 
-/* base files */
+/* reset files */
 
-@import "base/base-setup";
+@import "config/reset.local";
+@import "config/normalize";
+@import "config/base-setup";
 
-/* plugin */
-
-
-
-/* layout */
-
-
-
-/* components */
-
-
+/* base */
 
 /* module */
 
-
-
-/* Bootstrap */
+/* layout */
