detainling services page implemented

--- a/src/styles/scss/production/base/_bs-header.scss
+++ b/src/styles/scss/production/base/_bs-header.scss
@@ -1,9 +1,7 @@
 //bs-header
 .bs-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 6rem 10rem;
+    
+    padding: 6rem 0;
     position: fixed;
     top:0;
     left: 0;
@@ -11,6 +9,11 @@
     z-index: 10;
     background-color: $clr-root;
     transition: all 0.3s ease;
+    .cm-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
     .logo{
         max-width: 18rem;
         transition: all 0.3s ease;
