--- a/src/styles/scss/production/config/_base-setup.scss
+++ b/src/styles/scss/production/config/_base-setup.scss
@@ -27,6 +27,7 @@ body {
     background: $clr-root;
     width: 100%;
     overflow-x: hidden !important;
+    @include scrollbars(2px, $clr-primary, $clr-root);
 }
 
 h1,
