--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -13,6 +13,13 @@
 
 @import "base/bs-header";
 @import "base/bs-menu";
+@import "base/bs-banner";
+@import "base/bs-section";
+@import "base/bs-band";
+@import "base/bs-tile";
+@import "base/bs-infography";
+@import "base/btn";
+@import "base/bs-pattern";
 
 /* module */
 
