--- a/src/styles/scss/production/base/_bs-menu.scss
+++ b/src/styles/scss/production/base/_bs-menu.scss
@@ -4,10 +4,55 @@
     top: 0;
     bottom: 0;
     right: 0;
+    z-index: 15;
     background-color: $clr-primary;
     transform: translateX(200%);
     transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    padding: 0 8rem;
+    width: 40rem;
+    overflow-y: auto;
+
     &.active{
         transform: translateX(0);
+    }
+    .menu-link{
+        @include font-source-sans(3.6rem,4rem, $font1, $font-smbold, $clr-base, capitalize);
+    }
+
+    .menu-close{
+        position: absolute;
+        top: 5rem;
+        right: 6rem;
+        font-size: 3rem;
+        padding: 1rem;
+        width: 3rem;
+        height: 3rem;
+    }
+
+    .menu-wrap{
+        >.menu-link{
+            margin-bottom: 4.5rem;
+            &:last-child{
+                margin-bottom: 0;
+            }
+
+            .sub-menu-wrap{
+                padding-left: 2rem;
+                margin-top: 2rem;
+                .menu-item{
+                    margin-bottom: 2rem;
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
+                }
+                .menu-lnk{
+                    font-size: 2.8rem;
+                    line-height: 3.2rem;
+                }
+            }
+
+        }
     }
 }
