--- a/src/styles/scss/production/base/_bs-section.scss
+++ b/src/styles/scss/production/base/_bs-section.scss
@@ -3,11 +3,8 @@
     padding: 8rem 0;
     position: relative;
 
-    &.sec-first{
-        padding-top: 0
-    }
     &.sec-last{
-        padding-bottom: 0
+        padding-bottom: 20rem;
     }
 
     .sec-title{
