--- a/src/styles/scss/production/config/_variables.scss
+++ b/src/styles/scss/production/config/_variables.scss
@@ -6,6 +6,7 @@ $clr-primary: #40c5e7;
 $clr-secondary: #f39020;
 $clr-turnary: #1a1a1a;
 $clr-error: #cc0033;
+$clr-primary-shade: rgba(64,197,231,0.4);
 
 
 /*font family*/
