--- a/src/styles/scss/production/base/_bs-tile.scss
+++ b/src/styles/scss/production/base/_bs-tile.scss
@@ -42,6 +42,14 @@
         top: 0;
         bottom: 0;
         z-index: 3;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .icon{
+            font-size: 7rem;
+        }
+
     }
 
     &.typ1{
@@ -65,6 +73,14 @@
 
     &:hover{
         transform: scale(1.03);
-    }    
+    }   
+    
+    &.typ-video{
+
+        &:hover{
+            transform: scale(1);
+        }  
+
+    }
 
 }
