--- a/src/styles/scss/production/base/_bs-footer.scss
+++ b/src/styles/scss/production/base/_bs-footer.scss
@@ -2,4 +2,102 @@
 .bs-footer{
     background-color: $clr-turnary;
     padding: 8rem 0;
+
+    .footer-item-wrap{
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .footer-item {
+        padding: 0 2rem;
+        &:nth-child(1) {
+            flex: 1;
+        }
+        &:nth-child(2) {
+            flex: 1;
+        }
+        &:nth-child(3) {
+            flex: 6;
+            padding-right: 0;
+        }
+        .title {
+            @include font-source-sans(2.4rem, 1.8, $font1, $font-medium, $clr-base, initial);
+            margin-bottom: 2rem;
+            span{
+                position: relative;
+                padding-bottom: 0.5rem;
+                &:after {
+                    content: '';
+                    position:absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    height: 0.1rem;
+                    background-color: $clr-base;
+                }
+            }
+        }
+
+        .address-list {
+            display: flex;
+            align-items: flex-start;
+
+            .footer-list {
+                flex: 1;
+                padding-right: 2rem;
+
+                &:last-child {
+                    padding-right: 0;
+                }
+            }
+        }
+    }
+
+    .footer-list {
+        .footer-list-item {
+            @include font-source-sans(2rem, normal, $font1, $font-regular, $clr-base, initial);
+            padding: 1rem 0;
+
+            a {
+                &:hover {
+                    color: $clr-hover;
+                }
+            }
+
+            .address-desc {
+                opacity: 0.7;
+            }
+        }
+
+        .icon-text-wrap {
+            margin-bottom: 2rem;
+            .icon {
+                font-size: 3rem;
+                vertical-align: middle;
+                margin-right: 1.5rem;
+            }
+            .text {
+                @include font-source-sans(2.4rem, 2, $font2, $font-medium, $clr-base, initial);
+                vertical-align: middle;
+            }
+        }
+
+        .social-icon-wrap {
+            display: flex;
+            align-items: center;
+            .social-icon {
+                padding: 1rem;
+                &:nth-child(1) {
+                    padding-left: 0;
+                }
+                &:last-child {
+                    padding-right: 0;
+                }
+                .icon {
+                    font-size: 3.6rem;
+                }
+            }
+        }
+    }
 }
