--- a/src/styles/scss/production/base/_bs-pattern.scss
+++ b/src/styles/scss/production/base/_bs-pattern.scss
@@ -2,23 +2,35 @@
 .bs-pattern{
     position: relative;
 
-    &.pattern-orange{
+    &.patter-pos-1{
         &:before{
-            content:'';
-            position: absolute;
-            left: 0;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            background: url('../../../../assets/images/pattern-orange.svg') no-repeat 0 0 transparent;
-            opacity: 0.5;
+            background-size: 165%;
+            background-position: 55% 30%;
         }
+    }
 
-        &.patter-pos-1{
-            &:before{
-                background-size: 165%;
-                background-position: 55% 30%;
-            }
+    
+
+    &:before{
+        content:'';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        opacity: 0.5;
+    }
+
+    &.pattern-orange{
+        
+        &:before{
+            background: url('../../../../assets/images/pattern-orange.svg') no-repeat 0 0 transparent;
+        }
+    }
+
+    &.pattern-blue{
+        &:before{
+            background: url('../../../../assets/images/pattern-blue.svg') no-repeat 0 0 transparent;
         }
     }
 
