contact us page done

--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -23,6 +23,8 @@
 @import "base/bs-swiper";
 @import "base/bs-footer";
 @import "base/bs-service";
+@import "base/bs-contact";
+@import "base/bs-form";
 
 /* module */
 @import "module/mod-testimonial";
