--- a/src/styles/scss/production/config/_reset.local.scss
+++ b/src/styles/scss/production/config/_reset.local.scss
@@ -65,3 +65,18 @@ fieldset {
     padding: 0;
     margin: 0;
 }
+
+input{
+    &:focus{
+        outline: none;
+        box-shadow: none;
+    }
+}
+
+textarea{
+    resize: none;
+    &:focus{
+        outline: none;
+        box-shadow: none;
+    }
+}
