paint protection page done

--- a/src/styles/scss/production/base/_bs-infography.scss
+++ b/src/styles/scss/production/base/_bs-infography.scss
@@ -116,6 +116,19 @@
                 width: 150%;
             }
         }
+
+        &.typ-2{
+            .img-wrap{
+                max-width: 100rem;
+                margin-left: -7%;
+                img{
+                    width: 100%;
+                }
+            }
+            .info-wrap{
+                width: 80rem;
+            }
+        }
     }
 
     &.typ-grid-left{
