--- a/src/styles/scss/production/base/_bs-section.scss
+++ b/src/styles/scss/production/base/_bs-section.scss
@@ -37,4 +37,24 @@
             text-align: center;
         }
     }
+
+    &.typ-gradiant-orange{
+        &:before{
+            content:'';
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            top: 0;
+            z-index: -1;
+            background: rgba(0,0,0,1);
+            background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(145,86,18,0.94) 54%, rgba(150,89,19,0.94) 56%, rgba(150,89,19,1) 100%);
+            background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,1)), color-stop(54%, rgba(145,86,18,0.94)), color-stop(56%, rgba(150,89,19,0.94)), color-stop(100%, rgba(150,89,19,1)));
+            background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(145,86,18,0.94) 54%, rgba(150,89,19,0.94) 56%, rgba(150,89,19,1) 100%);
+            background: -o-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(145,86,18,0.94) 54%, rgba(150,89,19,0.94) 56%, rgba(150,89,19,1) 100%);
+            background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(145,86,18,0.94) 54%, rgba(150,89,19,0.94) 56%, rgba(150,89,19,1) 100%);
+            background: linear-gradient(to bottom, rgba(0,0,0,1) 0%, rgba(145,86,18,0.94) 54%, rgba(150,89,19,0.94) 56%, rgba(150,89,19,1) 100%);
+            filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#965913', GradientType=0 )";
+        }
+    }
 }
