--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -32,6 +32,7 @@
 @import "module/mod-info";
 @import "module/mod-list";
 @import "module/mod-team";
+@import "module/mod-benefits";
 
 /* layout */
 @import "layout/lyt-content";
