--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -25,6 +25,7 @@
 @import "base/bs-service";
 @import "base/bs-contact";
 @import "base/bs-form";
+@import "base/bs-list";
 
 /* module */
 @import "module/mod-testimonial";
@@ -33,6 +34,7 @@
 @import "module/mod-list";
 @import "module/mod-team";
 @import "module/mod-benefits";
+@import "module/mod-warranty";
 
 /* layout */
 @import "layout/lyt-content";
