--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-download:before {
+  content: "\e918";
+}
 .icon-hammer:before {
   content: "\e904";
 }
