washing page detailing page with tabs css fixes are done also the modal popup is implemented

--- a/src/styles/scss/production/module/_mod-warranty.scss
+++ b/src/styles/scss/production/module/_mod-warranty.scss
@@ -15,4 +15,8 @@
         border-bottom: 1px solid $clr-primary;
     }
 
+    &.typ-detailing-services {
+        justify-content: center;
+    }
+
 }
