--- a/src/styles/scss/production/config/_base-setup.scss
+++ b/src/styles/scss/production/config/_base-setup.scss
@@ -83,6 +83,9 @@ button {
 .cm-container{
     max-width: 172rem;
     margin: 0 auto;
+    @include mq-above ($lg) {
+        padding: 0 6rem;
+    }
 }
 
 .cm-paddtop-30{
