--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -41,6 +41,7 @@
 @import "module/mod-benefits";
 @import "module/mod-warranty";
 @import "module/mod-video";
+@import "module/mod-logo-list";
 
 /* layout */
 @import "layout/lyt-content";
@@ -50,6 +51,7 @@
 @import "layout/lyt-info";
 @import "layout/lyt-team";
 @import "layout/lyt-features-list";
+@import "layout/lyt-franchise";
 
 /* page */
 @import "page/pg-about";
