--- a/src/styles/scss/production/module/_mod-benefits.scss
+++ b/src/styles/scss/production/module/_mod-benefits.scss
@@ -34,4 +34,13 @@
         }
     }
 
+    &.typ-clarity-benefits {
+        max-width: 100%;
+        margin: unset;
+
+        .list-wrap {
+            padding: 0 6rem 0 2rem;
+        }
+    }
+
 }
