banner video added,flybutton created and the ceramic and ppf page changes are updated

--- a/src/styles/scss/production/module/_mod-video.scss
+++ b/src/styles/scss/production/module/_mod-video.scss
@@ -46,4 +46,14 @@
       }
     }
   }
+
+  &.typ-orange {
+    .playerWrapper{
+      .cm-btn-watch{
+        .icon {
+          color: $clr-secondary;
+        }
+      }
+    }
+  }
 }
