--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -31,6 +31,7 @@
 @import "base/bs-compare";
 @import "base/bs-tabs";
 @import "base/bs-videoplayer";
+@import "base/bs-action-fly";
 
 
 /* module */
@@ -53,6 +54,7 @@
 @import "layout/lyt-team";
 @import "layout/lyt-features-list";
 @import "layout/lyt-franchise";
+@import "layout/lyt-tile-grid";
 
 /* page */
 @import "page/pg-about";
