--- a/src/styles/scss/production/base/_bs-banner.scss
+++ b/src/styles/scss/production/base/_bs-banner.scss
@@ -42,7 +42,25 @@
         bottom: 0;
         background: url('../../../../assets/images/pattern-blue.svg') no-repeat 0 0 transparent;
         background-size: 135%;
-        animation: scale 1000s linear infinite;
+        // animation: scale 1000s linear infinite;
+    }
+
+    .video-wrap {
+        position: relative;
+        &:after {
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            background: rgba($clr-root, 0.5);
+        }
+        .video-player {
+            width: 100%;
+            height: 100%
+        }
     }
 
 }
