--- a/src/styles/scss/production/base/_bs-tile.scss
+++ b/src/styles/scss/production/base/_bs-tile.scss
@@ -55,11 +55,11 @@
     &.typ1{
         margin-bottom: 2.5rem;
         margin-right: 2.5rem;
-        clip-path: polygon(5% 0, 100% 0%, 100% 100%, 5% 100%);
+        // clip-path: polygon(5% 0, 100% 0%, 100% 100%, 5% 100%);
     }
     &.typ2{
         margin-bottom: 2.5rem;
-        clip-path: polygon(0 0, 95% 0, 95% 100%, 0 100%);
+        // clip-path: polygon(0 0, 95% 0, 95% 100%, 0 100%);
     }
     &.typ3{
         clip-path: polygon(0 0, 100% 0%, 95% 100%, 0% 100%);
