--- a/src/styles/scss/production/base/_bs-header.scss
+++ b/src/styles/scss/production/base/_bs-header.scss
@@ -13,17 +13,18 @@
         -webkit-backdrop-filter: blur( 30px );
     }
 
-    
-
     .cm-container{
         display: flex;
         align-items: center;
         justify-content: space-between;
+        max-width: initial;
     }
+
     .logo{
         max-width: 15rem;
         transition: all 0.5s ease;
     }
+
     .menu-btn{
         span{
             display: block;
@@ -36,6 +37,7 @@
             }
         }
     }
+
     &.header-scroll{
         padding: 2rem 0;
 
